sumo/tests/duarouter/trips/errors/vehicle_false_departspeed/errors.duarouter
Error: Invalid departSpeed definition for vehicle ''
Quitting (on error).
